lace/src/lace.h

/**
 * Using Lace.
 *
 * Optionally set the verbosity level with lace_set_verbosity.
 * Optionally set the default program stack size of each worker thread with lace_set_stacksize.
 *
 * Then call lace_start to start Lace workers.
 * - lace_start(n_workers, deque_size);
 *   set both parameters to 0 for reasonable defaults, using all available cores.
 *
 * After this, you can run tasks using the RUN(...)
 *
 * Use lace_suspend and lace_resume to temporarily stop running, or lace_stop to completely stop Lace.
 */

/**
 * Type definitions used in the functions below.
 * - WorkerP contains the (private) Worker data
 * - Task contains a single Task
 */
typedef struct _WorkerP WorkerP;
typedef struct _Task Task;
typedef struct _Task {
	TASK_COMMON_FIELDS(_Task);
	char p1[PAD(LACE_COMMON_FIELD_SIZE, P_SZ)];
	char d[LACE_TASKSIZE];
	char p2[PAD(ROUND(LACE_COMMON_FIELD_SIZE, P_SZ) + LACE_TASKSIZE,
		    LINE_SIZE)];
} Task;
typedef struct _Worker {
	Task *dq;
	TailSplit ts;
	uint8_t allstolen;

	char pad1[PAD(P_SZ + sizeof(TailSplit) + 1, LINE_SIZE)];

	uint8_t movesplit;
} Worker;
typedef struct _WorkerP {
	Task *dq; // same as dq
	Task *split; // same as dq+ts.ts.split
	Task *end; // dq+dq_size
	Worker *_public; // pointer to public Worker struct
	uint64_t rng; // my random seed (for lace_trng)
	uint32_t seed; // my random seed (for lace_steal_random)
	uint16_t worker; // what is my worker id?
	uint8_t allstolen; // my allstolen

#if LACE_COUNT_EVENTS
	uint64_t ctr[CTR_MAX]; // counters
	uint64_t time;
	int level;
#endif

	int16_t pu; // my pu (for HWLOC)
} WorkerP;